@@ -52,12 +52,12 @@
 		<mkdir dir="build/mobac" />
 		<!-- Compile the starter class for Java 1.4 (shows an verbose -->
 		<!-- error if the JRE requirements are not met -->
-		<javac srcdir="src/main/java" destdir="build/mobac" target="1.4" source="1.4" debug="true">
+		<javac srcdir="src/main/java" destdir="build/mobac" target="1.4" source="1.4" debug="true" includeantruntime="false">
 			<classpath refid="maincp" />
 			<include name="mobac/StartMOBAC.java" />
 		</javac>
 		<!-- Compile the other classes for Java 1.6 -->
-		<javac srcdir="src/main/java" destdir="build/mobac" target="1.6" debug="true">
+		<javac srcdir="src/main/java" destdir="build/mobac" target="1.6" debug="true" includeantruntime="false">
 			<classpath refid="maincp" />
 			<exclude name="mobac/StartMOBAC.java" />
 			<exclude name="mobac/mapsources/mappacks/**" />
